--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Портфолио - Петушкова Дарья</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -12,6 +12,7 @@
 </head>
 
 <body class="bg-light">
+    <a class="skip-link" href="#main">Перейти к основному содержимому</a>
     <div class="container-fluid p-0">
         <header class="bg-primary text-white py-4">
             <div class="container">
@@ -57,16 +58,20 @@
             </div>
         </nav>
 
-        <main class="container my-5">
+        <main id="main" class="container my-5">
             <section class="mb-5">
                 <div class="card shadow-sm">
                     <div class="card-body p-4">
                         <div class="row align-items-center">
-                            <div class="col-md-3 text-center mb-3 mb-md-0">
-                                <img src="images/photo.jpg" alt="Фото студента" class="img-fluid rounded-circle"
-                                    style="width: 150px; height: 150px; object-fit: cover;">
+                            <!-- ИСПРАВЛЕННАЯ СТРОКА: добавил col-12 для мобильных -->
+                            <div class="col-12 col-md-3 text-center mb-3 mb-md-0">
+                                <img src="images/photo.jpg"
+                                    srcset="images/photo-200-150.jpg 150w, images/photo-267-200.jpg 200w, images/photo-400-300.jpg 300w"
+                                    sizes="150px" alt="Фото студента" class="img-fluid rounded-circle"
+                                    style="width: 150px; height: 150px; object-fit: cover;" fetchpriority="high">
                             </div>
-                            <div class="col-md-9">
+                            <!-- ИСПРАВЛЕННАЯ СТРОКА: добавил col-12 для мобильных -->
+                            <div class="col-12 col-md-9">
                                 <h2 class="card-title h4 text-primary">Привет! Я Дарья</h2>
                                 <p class="card-text text-muted mb-2">
                                     Студент группы ЭФБО-04-24
@@ -148,8 +153,11 @@
                         <div class="row g-3">
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project1.jpg" class="card-img-top" alt="Личный сайт"
-                                        style="height: 150px; object-fit: cover;">
+                                    <img src="images/project1.jpg"
+                                        srcset="images/project1.jpg 300w, images/project1.jpg 400w, images/project1.jpg 600w"
+                                        sizes="(max-width: 576px) 300px, (max-width: 768px) 350px, 400px" width="400"
+                                        height="150" alt="Личный сайт" class="card-img-top"
+                                        style="height: 150px; object-fit: cover;" loading="lazy">
                                     <div class="card-body">
                                         <h5 class="card-title">Личный сайт</h5>
                                         <p class="card-text small text-muted">
@@ -165,8 +173,11 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project2.jpg" class="card-img-top" alt="Todo приложение"
-                                        style="height: 150px; object-fit: cover;">
+                                    <img src="images/project2.jpg"
+                                        srcset="images/project2.jpg 300w, images/project2.jpg 400w, images/project2.jpg 600w"
+                                        sizes="(max-width: 576px) 300px, (max-width: 768px) 350px, 400px" width="400"
+                                        height="150" alt="Todo приложение" class="card-img-top"
+                                        style="height: 150px; object-fit: cover;" loading="lazy">
                                     <div class="card-body">
                                         <h5 class="card-title">Todo приложение</h5>
                                         <p class="card-text small text-muted">
@@ -181,8 +192,11 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card h-100">
-                                    <img src="images/project3.jpg" class="card-img-top" alt="Приложение баз данных"
-                                        style="height: 150px; object-fit: cover;">
+                                    <img src="images/project3.jpg"
+                                        srcset="images/project3.jpg 300w, images/project3.jpg 400w, images/project3.jpg 600w"
+                                        sizes="(max-width: 576px) 300px, (max-width: 768px) 350px, 400px" width="400"
+                                        height="150" alt="Приложение баз данных" class="card-img-top"
+                                        style="height: 150px; object-fit: cover;" loading="lazy">
                                     <div class="card-body">
                                         <h5 class="card-title">Приложение баз данных</h5>
                                         <p class="card-text small text-muted">
