--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 
+<a class="skip-link" href="#main">Перейти к основному содержимому</a>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Контакты - Портфолио</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -13,6 +15,7 @@
 </head>
 
 <body class="bg-light">
+    <a class="skip-link" href="#main">Перейти к основному содержимому</a>
     <div class="container-fluid p-0">
         <header class="bg-primary text-white py-4">
             <div class="container">
@@ -57,7 +60,7 @@
             </div>
         </nav>
 
-        <main class="container my-5">
+        <main id="main" class="container my-5">
             <div class="row mb-4">
                 <div class="col">
                     <h1 class="display-5 text-center text-primary">Контакты</h1>
