--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">ы
     <title>Проекты - Портфолио</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -13,6 +13,7 @@
 </head>
 
 <body class="bg-light">
+    <a class="skip-link" href="#main">Перейти к основному содержимому</a>
     <div class="container-fluid p-0">
         <header class="bg-primary text-white py-4">
             <div class="container">
@@ -57,7 +58,7 @@
             </div>
         </nav>
 
-        <main class="container my-5">
+        <main id="main" class="container my-5">
             <div class="row mb-4">
                 <div class="col">
                     <h1 class="display-5 text-center text-primary">Мои проекты</h1>
@@ -86,32 +87,43 @@
             </div>
 
             <div class="row g-4">
-                <div class="col-md-6 col-lg-4 project-card" data-technologies="html">
-                    <div class="card h-100 shadow-sm">
-                        <img src="../images/project1.jpg" class="card-img-top" alt="Личный сайт"
-                            style="height: 200px; object-fit: cover;">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Личный сайт</h5>
-                            <p class="card-text flex-grow-1">
-                                Сайт-портфолио на HTML, CSS и Bootstrap с адаптивным дизайном и современным интерфейсом.
-                            </p>
-                            <div class="mt-auto">
-                                <div class="mb-2">
-                                    <span class="badge bg-primary">HTML/CSS</span>
+                <div class="projects-container">
+                    <div class="projects-grid">
+                        <div class="col-md-6 col-lg-4 project-card" data-technologies="html">
+                            <div class="card h-100 shadow-sm">
+                                <img src="../images/project1.jpg"
+                                    srcset="../images/project1.jpg 300w, ../images/project1.jpg 400w, ../images/project1.jpg 600w"
+                                    sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400"
+                                    height="200" alt="Личный сайт" style="height: 200px; object-fit: cover;"
+                                    loading="lazy">
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">Личный сайт</h5>
+                                    <p class="card-text flex-grow-1">
+                                        Сайт-портфолио на HTML, CSS и Bootstrap с адаптивным дизайном и современным
+                                        интерфейсом.
+                                    </p>
+                                    <div class="mt-auto">
+                                        <div class="mb-2">
+                                            <span class="badge bg-primary">HTML/CSS</span>
+                                        </div>
+                                        <button class="btn btn-primary w-100" data-bs-toggle="modal"
+                                            data-bs-target="#project1Modal">
+                                            Подробнее
+                                        </button>
+                                    </div>
                                 </div>
-                                <button class="btn btn-primary w-100" data-bs-toggle="modal"
-                                    data-bs-target="#project1Modal">
-                                    Подробнее
-                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
 
+
                 <div class="col-md-6 col-lg-4 project-card" data-technologies="flutter">
                     <div class="card h-100 shadow-sm">
-                        <img src="../images/project2.jpg" class="card-img-top" alt="Мобильное приложение"
-                            style="height: 200px; object-fit: cover;">
+                        <img src="../images/project2.jpg"
+                            srcset="../images/project2.jpg 300w, ../images/project2.jpg 400w, ../images/project2.jpg 600w"
+                            sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400" height="200"
+                            alt="Личный сайт" style="height: 200px; object-fit: cover;" loading="lazy">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Мобильное приложение</h5>
                             <p class="card-text flex-grow-1">
@@ -132,8 +144,10 @@
 
                 <div class="col-md-6 col-lg-4 project-card" data-technologies="python">
                     <div class="card h-100 shadow-sm">
-                        <img src="../images/project3.jpg" class="card-img-top" alt="Приложение баз данных"
-                            style="height: 200px; object-fit: cover;">
+                        <img src="../images/project3.jpg"
+                            srcset="../images/project3.jpg 300w, ../images/project3.jpg 400w, ../images/project3.jpg 600w"
+                            sizes="(max-width: 576px) 300px, (max-width: 992px) 350px, 400px" width="400" height="200"
+                            alt="Личный сайт" style="height: 200px; object-fit: cover;" loading="lazy">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Приложение баз данных</h5>
                             <p class="card-text flex-grow-1">
