--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<a class="skip-link" href="#main">Перейти к основному содержимому</a>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -11,13 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
-
 </head>
 
 <body class="bg-light">
     <a class="skip-link" href="#main">Перейти к основному содержимому</a>
+
     <div class="container-fluid p-0">
-        <header class="bg-primary text-white py-4">
+        <header class="bg-primary text-white py-4" role="banner">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col">
@@ -28,31 +26,32 @@
             </div>
         </header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Основная навигация">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-expanded="false" aria-controls="navbarNav" aria-label="Переключить навигацию">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html">
-                                <i class="bi bi-house me-1"></i>Главная
+                    <ul class="navbar-nav" role="menubar">
+                        <li class="nav-item" role="none">
+                            <a class="nav-link" href="../index.html" role="menuitem">
+                                <i class="bi bi-house me-1" aria-hidden="true"></i>Главная
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="projects.html">
-                                <i class="bi bi-folder me-1"></i>Проекты
+                        <li class="nav-item" role="none">
+                            <a class="nav-link" href="projects.html" role="menuitem">
+                                <i class="bi bi-folder me-1" aria-hidden="true"></i>Проекты
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="diary.html">
-                                <i class="bi bi-journal me-1"></i>Дневник
+                        <li class="nav-item" role="none">
+                            <a class="nav-link" href="diary.html" role="menuitem">
+                                <i class="bi bi-journal me-1" aria-hidden="true"></i>Дневник
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="contacts.html">
-                                <i class="bi bi-telephone me-1"></i>Контакты
+                        <li class="nav-item" role="none">
+                            <a class="nav-link active" href="contacts.html" aria-current="page" role="menuitem">
+                                <i class="bi bi-telephone me-1" aria-hidden="true"></i>Контакты
                             </a>
                         </li>
                     </ul>
@@ -60,7 +59,7 @@
             </div>
         </nav>
 
-        <main id="main" class="container my-5">
+        <main id="main" class="container my-5" role="main">
             <div class="row mb-4">
                 <div class="col">
                     <h1 class="display-5 text-center text-primary">Контакты</h1>
@@ -72,32 +71,48 @@
                 <div class="col-lg-7 mb-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-light">
-                            <h3 class="card-title h5 mb-0">
-                                <i class="bi bi-envelope me-2"></i>Форма обратной связи
-                            </h3>
+                            <h2 class="card-title h5 mb-0">
+                                <i class="bi bi-envelope me-2" aria-hidden="true"></i>Форма обратной связи
+                            </h2>
                         </div>
                         <div class="card-body">
-                            <form id="contactForm">
+                            <form id="contactForm" aria-labelledby="contact-form-title">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">Имя *</label>
-                                        <input type="text" class="form-control" id="name" required>
+                                        <input type="text" class="form-control" id="name" required aria-required="true"
+                                            aria-describedby="name-hint">
+                                        <div id="name-hint" class="form-text visually-hidden">
+                                            Пожалуйста, введите ваше полное имя
+                                        </div>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="email" class="form-label">Email *</label>
-                                        <input type="email" class="form-control" id="email" required>
+                                        <input type="email" class="form-control" id="email" required
+                                            aria-required="true" aria-describedby="email-hint">
+                                        <div id="email-hint" class="form-text visually-hidden">
+                                            Введите действующий email адрес для ответа
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="subject" class="form-label">Тема</label>
-                                    <input type="text" class="form-control" id="subject">
+                                    <input type="text" class="form-control" id="subject"
+                                        aria-describedby="subject-hint">
+                                    <div id="subject-hint" class="form-text visually-hidden">
+                                        Укажите тему вашего сообщения
+                                    </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Сообщение *</label>
-                                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                                    <textarea class="form-control" id="message" rows="5" required aria-required="true"
+                                        aria-describedby="message-hint"></textarea>
+                                    <div id="message-hint" class="form-text visually-hidden">
+                                        Опишите подробно ваш вопрос или предложение
+                                    </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary">
-                                    <i class="bi bi-send me-2"></i>Отправить сообщение
+                                    <i class="bi bi-send me-2" aria-hidden="true"></i>Отправить сообщение
                                 </button>
                             </form>
                         </div>
@@ -107,54 +122,56 @@
                 <div class="col-lg-5">
                     <div class="card shadow-sm mb-4">
                         <div class="card-header bg-light">
-                            <h3 class="card-title h5 mb-0">
-                                <i class="bi bi-info-circle me-2"></i>Контактная информация
-                            </h3>
+                            <h2 class="card-title h5 mb-0">
+                                <i class="bi bi-info-circle me-2" aria-hidden="true"></i>Контактная информация
+                            </h2>
                         </div>
                         <div class="card-body">
                             <div class="d-flex align-items-center mb-3">
-                                <div class="bg-primary rounded-circle p-2 me-3">
+                                <div class="bg-primary rounded-circle p-2 me-3" aria-hidden="true">
                                     <i class="bi bi-envelope text-white"></i>
                                 </div>
                                 <div>
-                                    <h6 class="mb-1">Email</h6>
-                                    <a href="mailto:dasha.petushkova@example.com" class="text-decoration-none">
+                                    <h3 class="h6 mb-1">Email</h3>
+                                    <a href="mailto:dasha.petushkova@yandex.ru" class="text-decoration-none"
+                                        aria-label="Написать письмо на dasha.petushkova@yandex.ru">
                                         dasha.petushkova@yandex.ru
                                     </a>
                                 </div>
                             </div>
 
                             <div class="d-flex align-items-center mb-3">
-                                <div class="bg-success rounded-circle p-2 me-3">
+                                <div class="bg-success rounded-circle p-2 me-3" aria-hidden="true">
                                     <i class="bi bi-telephone text-white"></i>
                                 </div>
                                 <div>
-                                    <h6 class="mb-1">Телефон</h6>
-                                    <a href="tel:+79991234567" class="text-decoration-none">
+                                    <h3 class="h6 mb-1">Телефон</h3>
+                                    <a href="tel:+79991234567" class="text-decoration-none"
+                                        aria-label="Позвонить по номеру +7 (999) 123-45-67">
                                         +7 (999) 123-45-67
                                     </a>
                                 </div>
                             </div>
 
                             <div class="d-flex align-items-center mb-3">
-                                <div class="bg-dark rounded-circle p-2 me-3">
+                                <div class="bg-dark rounded-circle p-2 me-3" aria-hidden="true">
                                     <i class="bi bi-github text-white"></i>
                                 </div>
                                 <div>
-                                    <h6 class="mb-1">GitHub</h6>
-                                    <a href="https://github.com/yourusername" target="_blank"
-                                        class="text-decoration-none">
+                                    <h3 class="h6 mb-1">GitHub</h3>
+                                    <a href="https://github.com/fetrias" target="_blank" class="text-decoration-none"
+                                        aria-label="Перейти на GitHub профиль fetrias (откроется в новой вкладке)">
                                         https://github.com/fetrias
                                     </a>
                                 </div>
                             </div>
 
                             <div class="d-flex align-items-center">
-                                <div class="bg-info rounded-circle p-2 me-3">
+                                <div class="bg-info rounded-circle p-2 me-3" aria-hidden="true">
                                     <i class="bi bi-geo-alt text-white"></i>
                                 </div>
                                 <div>
-                                    <h6 class="mb-1">Местоположение</h6>
+                                    <h3 class="h6 mb-1">Местоположение</h3>
                                     <p class="mb-0">Москва, Россия</p>
                                 </div>
                             </div>
@@ -163,14 +180,16 @@
 
                     <div class="card shadow-sm">
                         <div class="card-header bg-light">
-                            <h3 class="card-title h5 mb-0">
-                                <i class="bi bi-map me-2"></i>Карта
-                            </h3>
+                            <h2 class="card-title h5 mb-0">
+                                <i class="bi bi-map me-2" aria-hidden="true"></i>Карта
+                            </h2>
                         </div>
                         <div class="card-body p-0">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.372789905729!2d37.61729927657803!3d55.75582600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a50b315e573%3A0xa886bf5a3d9b2e68!2z0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1700000000000!5m2!1sru!2sru"
                                 width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                title="Карта расположения в Москве"
+                                aria-label="Интерактивная карта показывающая местоположение в Москве"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
@@ -179,7 +198,7 @@
             </div>
         </main>
 
-        <footer class="bg-dark text-white py-4 mt-5">
+        <footer class="bg-dark text-white py-4 mt-5" role="contentinfo">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
@@ -196,8 +215,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/form-validation.js"></script>
     <script src="../scripts/main.js"></script>
-    <script src="/Portfolio_project/script/form-validation.js"></script>
-    <script src="/Portfolio_project/script/main.js"></script>
 </body>
 
 </html>
